# nittei-backend

./: .gitignore  Cargo.toml  TODO  sql  sql_explain
migrations/2021-10-29-173302_create_users/: up.sql
migrations/2021-10-29-173410_create_tokens/: up.sql
migrations/2021-10-29-173638_create_resetcodes/: down.sql  up.sql
migrations/2021-10-29-173722_create_friends/: down.sql  up.sql
migrations/2021-10-29-173756_create_blocks/: up.sql
migrations/2021-10-29-173929_create_times/: down.sql  up.sql
migrations/2021-10-29-174008_create_comments/: up.sql
migrations/2021-10-31-134321_authlevel/: down.sql  up.sql
migrations/2021-10-31-152155_email_timestamp/: down.sql  up.sql
migrations/2021-11-01-220942_fix_tokens/: down.sql  up.sql
src/: auth.rs  consts.rs  main.rs  schema.rs  sql.rs  util.rs
