[package]
name = "nittei-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nittei-common={version="0.1", git="https://github.com/aftix/nittei-common"}
bcrypt = "0.10"
rocket = "0.4"
postgres = "0.19"
toml = "0.5"
ron="0.7"
passwords="3.1"
totp-lite="1.0"
