[package]
name = "nittei-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nittei-common={version="0.1.16", git="https://github.com/aftix/nittei-common", features=["guards"]}
rocket = { git="https://github.com/SergioBenitez/Rocket", version="0.5.0-rc.1" }
toml = "~0.5"
ron="~0.7"
passwords = "~3.1"
totp-lite = "~1.0"
rust-argon2 = "~0.8"
jsonwebtoken = "~7.2"
rand_chacha = "~0.3"
rand = "~0.8"
serde = {version="~1.0", features=["derive"]}
diesel = {version="~1.4", features=["postgres", "chrono"]}
chrono = "~0.4"
email-address-parser = "~1.0"
lettre = "~0.9"
lettre_email = "~0.9"

[dependencies.rocket_sync_db_pools]
version="0.1.0-rc.1"
git="https://github.com/SergioBenitez/Rocket"
default-features=false
features=["diesel_postgres_pool"]
